--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_riverpod:
+  hive:
+  hive_generator:
+  path_provider:
+  build_runner:
 
 dev_dependencies:
   flutter_test:
